Fixed alignment of the nav when the screen is mobile-sized. Temporarily removed account dropdown element from nav when screen is mobile-sized. Adjusted right sidebar padding to match navSidebar.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -79,15 +79,12 @@
     padding: 0;
   }
 
-  header {
-    display: none !important;
-  }
-
   .nav-sidebar {
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
+    padding: 0;
   }
 
   .nav-sidebar nav {
@@ -97,6 +94,10 @@
   .nav-sidebar .links {
     flex-direction: row !important;
     justify-content: space-around;
+  }
+
+  .nav-sidebar .curr-user {
+    display: none;
   }
 
   .main {
